--- a/baseline_trials/Demographics.html
+++ b/baseline_trials/Demographics.html
@@ -2,6 +2,14 @@
 
     Demographic Questions
 
+<div style="display: flex; justify-content: center">
+    <label>
+<!--        Step {{ participant.progress }} of {{ C.total_pages }}-->
+        <progress value="{{ participant.progress }}" max="{{ C.total_pages }}">
+        </progress>
+    </label>
+</div>
+
 {{ endblock }}
 
 {{ block content }}
