--- a/baseline_trials/instructionPage.html
+++ b/baseline_trials/instructionPage.html
@@ -1,5 +1,12 @@
 {{ block title }}
 
+<div style="display: flex; justify-content: center">
+    <label>
+<!--        Step {{ participant.progress }} of {{ C.total_pages }}-->
+        <progress value="{{ participant.progress }}" max="{{ C.total_pages }}">
+        </progress>
+    </label>
+</div>
 {{ endblock }}
 {{ block content }}
 
